Lab1/log/build_2026-03-12_15-42-42/laser/stderr.log
  File "/home/dcs/Desktop/Lab/Lab1/install/laser/lib/python3.8/site-packages/laser/laser.py", line 37
    self.scan_callback,
    ^
SyntaxError: invalid syntax

